# Collaborative-Robby

./: CMakeLists.txt  Makefile  README.md  TODO  robbyGUI.cpp
run/: run.txt
src/: modules.c  modules.cpp  move-stupid.c  robby.c  robby.cpp
src/include/: module.h
src/include/robby/: Fraction.h  commons.h  dismath.h  module.h  neural-net-const.h  neural-net-utils.h  neural-net.h  struct.h
src/plugins/: move-stupid.c  neural-net.cpp
src/plugins/move-stupid/: move-stupid.cpp
src/plugins/neural-net/: Fractions.cpp  Gene.cpp  Genome.cpp  Node.cpp  Species.cpp  classes.cpp  neural-net.cpp  utils.cpp
tools/: plot.sh
